--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000017C8E6DF8C8>"
+       "<function <lambda> at 0x00000208BA8F2A60>"
       ]
      },
      "execution_count": 3,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000017C8E6DF9D8>"
+       "<function <lambda> at 0x00000208BA8F2AE8>"
       ]
      },
      "execution_count": 4,
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000017C8E6DF840>"
+       "<function <lambda> at 0x00000208BA8F2BF8>"
       ]
      },
      "execution_count": 5,
@@ -158,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x0000017C8EA619D8>"
+       "<function <lambda> at 0x00000208BA9CAAE8>"
       ]
      },
      "execution_count": 6,
@@ -297,6 +297,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "; do structure\n",
+    "(assert (= (DO (LET a 1) (LET b 2) (LET c b) (a b c d))  \"(1 2 2 d)\"))\n",
+    "(assert (L , (COND (DO (TRUE) (FALSE) (TRUE) (FALSE)) TRUE FALSE) \"(L a b , b)\"))\n",
+    "(assert (L , (COND (DO (TRUE) (TRUE) (TRUE) (TRUE)) TRUE FALSE) \"(L a b , a)\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "; and tests\n",
     "(assert (=\n",
     "  (, (AND TRUE TRUE) (AND TRUE FALSE)\n",
@@ -337,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -390,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -405,14 +417,14 @@
     "; product sequence, with number macro form\n",
     "(assert (= (FACTORIAL THREE) \"(x (x (x (x (x (x y))))))\"))\n",
     "; fibonacci, with plain number\n",
-    "(assert (= (FIBONACCI (L x y , (x (x (x (x (x y))))))) \"(x (x (x (x (x (x (x (x y))))))))\"))\n",
+    "(assert (= (FIBONACCI (L x y , (x (x (x (x (x y))))))) \"(x (x (x (x (x y)))))\"))\n",
     "; fibonacci, with number macro form\n",
-    "(assert (= (FIBONACCI FIVE) \"(x (x (x (x (x (x (x (x y))))))))\"))"
+    "(assert (= (FIBONACCI FIVE) \"(x (x (x (x (x y)))))\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +452,7 @@
        "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,27 +463,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
+       "'(x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(FIBONACCI (NUM 9))"
+    "(FIBONACCI (NUM 7))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +492,7 @@
        "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
