--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000208BA8F2A60>"
+       "<function <lambda> at 0x00000276EB570BF8>"
       ]
      },
      "execution_count": 3,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000208BA8F2AE8>"
+       "<function <lambda> at 0x00000276EB570D08>"
       ]
      },
      "execution_count": 4,
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000208BA8F2BF8>"
+       "<function <lambda> at 0x00000276EB3AB048>"
       ]
      },
      "execution_count": 5,
@@ -158,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000208BA9CAAE8>"
+       "<function <lambda> at 0x00000276EB56A0D0>"
       ]
      },
      "execution_count": 6,
@@ -197,16 +197,19 @@
     "; pair constructor\n",
     "(assert (= (PAIR TRUE NIL) \"(s (L a b , a) (L a b , b))\"))\n",
     "; selector\n",
-    "(assert (= (PAIR TRUE NIL FIRST) (TRUE)))\n",
+    "(assert (= (PAIR TRUE NIL TRUE) (TRUE)))\n",
+    "; selector\n",
+    "(assert (= (PAIR TRUE NIL FALSE) (NIL)))\n",
     "; head and tail\n",
     "(assert (= (, (HEAD (PAIR TRUE NIL)) \n",
     "              (TAIL (PAIR TRUE NIL))) \n",
     "           (, (TRUE) (NIL))))\n",
     "; is nil, simple\n",
-    "(assert (= (, (NIL? NIL) (NIL? TRUE)) (, (TRUE) (FALSE))))\n",
+    "(assert (= (, (NIL? NIL) (NIL? FALSE) (NIL? TRUE) (NIL? ONE))\n",
+    "           (, (TRUE) (TRUE) \"(L a , (L a b , b))\" (FALSE))))\n",
     "; is nil, head and tail\n",
-    "(assert (= (, (NIL? (HEAD (PAIR TRUE NIL))) \n",
-    "              (NIL? (TAIL (PAIR TRUE NIL)))) \n",
+    "(assert (= (, (NIL? (HEAD (PAIR ONE NIL))) \n",
+    "              (NIL? (TAIL (PAIR ONE NIL)))) \n",
     "           (, (FALSE) (TRUE))))\n",
     "; nested pairs and heads and tails\n",
     "(assert (=\n",
@@ -216,20 +219,9 @@
     "   (, (TRUE) (TRUE) (NIL))))\n",
     "; nil? for nested pairs\n",
     "(assert (=\n",
-    "  (, (NIL? (TAIL (TAIL (PAIR TRUE (PAIR TRUE NIL))))) \n",
-    "     (NIL? (HEAD (TAIL (PAIR TRUE (PAIR TRUE NIL))))))\n",
+    "  (, (NIL? (TAIL (TAIL (PAIR ONE (PAIR ONE NIL))))) \n",
+    "     (NIL? (HEAD (TAIL (PAIR ONE (PAIR ONE NIL))))))\n",
     "  (, (TRUE) (FALSE))))\n",
-    "; selectors for pairs\n",
-    "(assert (=  (, (PAIR (PAIR TRUE FALSE FIRST) NIL FIRST)\n",
-    "               (PAIR (PAIR TRUE FALSE SECOND) NIL FIRST)\n",
-    "               (PAIR (PAIR TRUE FALSE FIRST) NIL SECOND)\n",
-    "               (PAIR (PAIR TRUE FALSE SECOND) NIL SECOND)\n",
-    "               (PAIR TRUE (PAIR TRUE NIL FIRST) FIRST)\n",
-    "               (PAIR TRUE (PAIR TRUE NIL SECOND) FIRST)\n",
-    "               (PAIR TRUE (PAIR TRUE NIL FIRST) SECOND)\n",
-    "               (PAIR TRUE (PAIR TRUE NIL SECOND) SECOND))\n",
-    "            (, (TRUE) (FALSE) (NIL) (NIL)\n",
-    "               (TRUE) (TRUE) (TRUE) (NIL))))\n",
     "; simple condition\n",
     "(assert (=\n",
     "    (, (COND TRUE TRUE FALSE) \n",
@@ -245,13 +237,19 @@
     "(assert (=\n",
     "    (, (COND (NIL? (TAIL (PAIR (NUM 1) NIL))) TRUE FALSE)\n",
     "       (COND (NIL? (HEAD (PAIR (NUM 1) NIL))) TRUE FALSE))\n",
-    "    (, (TRUE) (FALSE))))"
+    "    (, (TRUE) (FALSE))))\n",
+    "; TODO: this requires some thinking, nil to lists should be done with\n",
+    "; empty? check?\n",
+    "(assert (= (, (NIL? (PAIR ONE TWO)) (NIL? (LIST ONE TWO)) (NIL? (LIST)))\n",
+    "           (, (TRUE) (TRUE) (TRUE))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; church numeral general generator, without arguments\n",
@@ -271,6 +269,34 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "; lists\n",
+    "; empty\n",
+    "(assert (= (LIST) \n",
+    "           \"(s (L a b , b) (L a b , b))\"))\n",
+    "(assert (= (LIST NIL) \n",
+    "           \"(s (L a b , b) (s (L a b , b) (L a b , b)))\"))\n",
+    "; one item\n",
+    "(assert (= (LIST ONE) \n",
+    "           \"(s (L x y , (x y)) (s (L a b , b) (L a b , b)))\"))\n",
+    "; three items\n",
+    "(assert (= (LIST ONE TWO) \n",
+    "           \"(s (L x y , (x y)) (s (L x y , (x (x y))) (s (L a b , b) (L a b , b))))\"))\n",
+    "; first\n",
+    "(assert (= (FIRST (LIST ONE TWO THREE)) (ONE)))\n",
+    "; second\n",
+    "(assert (= (SECOND (LIST ONE TWO THREE)) (TWO)))\n",
+    "; last\n",
+    "(assert (= (LAST (LIST ONE TWO THREE)) (THREE)))\n",
+    "; append to the end of the list\n",
+    "(assert (= (LAST (APPEND FOUR (LIST ONE TWO THREE))) (FOUR)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -293,8 +319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; do structure\n",
@@ -305,8 +333,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; and tests\n",
@@ -349,8 +379,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; math operations\n",
@@ -383,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +484,7 @@
        "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +504,7 @@
        "'(x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +524,7 @@
        "'(x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x (x y))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
