--- a/README
+++ b/README
@@ -54,6 +54,8 @@ least of the fixed point combinator or shortly, ϒ combinator.
 Quick start
 -----------
 
+For people willing to get hands quickly on coding:
+
 **Install**
 
 .. code-block:: bash
@@ -75,3 +77,11 @@ Quick start
 .. code-block:: hylang
 
 	(FIBONACCI SEVEN) ; output: (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))
+
+
+The `MIT <http://choosealicense.com/licenses/mit/>`__ License
+-------------------------------------------------------------
+
+Copyright (c) 2017 Marko Manninen
+
+.. |Output:| replace:: [output]
