--- a/README
+++ b/README
@@ -5,9 +5,9 @@ Calchylus - Lambda calculus with Hy
 Intro
 -----
 
-``calchylus`` is a computer installable `Hy <http://docs.hylang.org>`__ module
-that is used to evaluate, and furthermore through this documentation, shine
-light to the basics of Lambda calculus (also written as λ-calculus).
+``calchylus`` is a computer installable `Hy`_ module that is used to evaluate,
+and furthermore through this documentation, shine light to the basics of Lambda
+calculus (also written as λ-calculus).
 
 	`Lambda calculus`_ is a formal system in mathematical logic for expressing
 	computation that is based on function abstraction and application using
@@ -20,8 +20,7 @@ b) may have or are interested to gain some experience in Python and/or Lisp
 c) who wants to narrow the gap between mathematical notation and
    programming languages, especially by means of logic
 
-`Andrew Bayer <http://math.andrej.com/2016/08/30/formal-proofs-are-not-just-deduction-steps/>`__
-writes in his blog post about formal proofs and deduction:
+`Andrew Bayer`_ writes in his blog post about formal proofs and deduction:
 
 	*Traditional logic, and to some extent also type theory, hides computation
 	behind equality.*
@@ -31,24 +30,21 @@ done by manipulation of the Lambda terms. Manipulation rules are simple and
 were originally made with a paper and a pen, but now we rather use computers for
 the task. Lambda calculus also addresses the problem, what can be proved and
 solved and what cannot be computed in a finite time. Formally these are called
-the decidability and the halting problem.
+the `decidability`_ and the `halting problem`_.
 
 Beside evaluating Lambda expressions, ``calchylus`` module can serve as a
-starting point for a mini programming language. Via custom macros representing
-well known Lambda forms, ``calchylus`` provides all necessary elements for
-boolean, positive integer, and list data types as well as conditionals, loops,
-variable setters, imperative do structure, logical connectives, and arithmetic
-operators. Also, exemplary functions calculating summation, factorial, and
-nth fibonacci number are provided. You can build upon that, for example
-`real numbers <https://cs.stackexchange.com/questions/2272/representing-negative-and-complex-numbers-using-lambda-calculus?noredirect=1&lq=1>`__,
-even negative complex numbers if that makes any sense. Your imagination is
-really the only limit.
+starting point for a mini programming language. Via `custom macros`_
+representing well known Lambda forms, ``calchylus`` provides all necessary
+elements for boolean, positive integer, and list data types as well as
+conditionals, loops, variable setters, imperative do structure, logical
+connectives, and arithmetic operators. You can build upon that, for example
+`real numbers`_, even negative complex numbers if that makes any sense. Your
+imagination is really the only limit.
 
 Finally, when investigating the open source ``calchylus`` implementation that is
-hosted on `GitHub <https://github.com/markomanninen/calchylus>`__, one can
-expect to get a good understanding of the higher order functions and the
-`combinatory logic <https://en.wikipedia.org/wiki/Combinatory_logic>`__, not the
-least of the fixed point combinator or shortly, ϒ combinator.
+hosted on `GitHub`_ , one can expect to get a good understanding of the higher
+order functions and the `combinatory logic`_, not the least of the fixed point
+combinator or shortly, ϒ combinator.
 
 
 Quick start
@@ -61,14 +57,26 @@ For people willing to get hands quickly on coding:
 .. code-block:: bash
 
 	$ pip install hy calchylus
+
+**Open Hy**
+
+.. code-block:: bash
+
 	$ hy
 
-**Run**
+**Import**
 
 .. code-block:: hylang
 
 	(require [calchylus.lambdas [*]])
+
+**Initialize**
+
+.. code-block:: hylang
+
 	(with-alpha-conversion-and-macros L ,)
+
+**Lambda dance**
 
 .. code-block:: hylang
 
@@ -77,6 +85,13 @@ For people willing to get hands quickly on coding:
 .. code-block:: hylang
 
 	(FIBONACCI SEVEN) ; output: (x (x (x (x (x (x (x (x (x (x (x (x (x y)))))))))))))
+
+
+Documentation
+-------------
+
+For full documentation, see: `calchylus.readthedocs.io`_
+
 
 .. |Output:| replace:: [output]
 
@@ -90,3 +105,4 @@ For people willing to get hands quickly on coding:
 .. _Andrew Bayer: http://math.andrej.com/2016/08/30/formal-proofs-are-not-just-deduction-steps/
 .. _Lambda calculus: https://en.wikipedia.org/wiki/Lambda_calculus
 .. _Hy: http://docs.hylang.org
+.. _calchylus.readthedocs.io: http://calchylus.readthedocs.io/
