--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000150F1C4B378>"
+       "<function <lambda> at 0x00000152DD81C2F0>"
       ]
      },
      "execution_count": 3,
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000150F1BD3620>"
+       "<function <lambda> at 0x00000152DDA3E950>"
       ]
      },
      "execution_count": 4,
@@ -136,13 +136,25 @@
     "; multiary function with arguments\n",
     "(assert (= (L x y z , (z x y) j k l) \"(l j k)\"))\n",
     "; application without arguments\n",
-    "(assert (= (L , ((L x y z , (x y z)))) \"(L x y z , (x y z))\"))\n",
+    "(assert (= (L , ((L x y z , (x y z)))) \"(L x , (L y , (L z , (x y z))))\"))\n",
     "; application with arguments\n",
     "(assert (= (L , ((L x y z , (x y z)) a b c)) \"(a b c)\"))\n",
     "; any free arguments should be returned on the final result\n",
     "(assert (= (L x , x y z) \"(y z)\"))\n",
     "; nested free arguments\n",
-    "(assert (= (L , ((L x y z , (x y z) l m n) a b c) 1 2 3) \"((l m n) a b c 1 2 3)\"))"
+    "(assert (= (L , ((L x y z , (x y z) l m n) a b c) 1 2 3) \"((l m n) a b c 1 2 3)\"))\n",
+    "; head normal form reduction\n",
+    "(assert (= (L x , (L y , (L z , z 1))) \"(L x , (L y , 1))\"))\n",
+    "; nested constants\n",
+    "(assert (= (L , (L , (L , 1))) 1))\n",
+    "; higher-order function, abstration\n",
+    "(assert (= (L x , x (L y , y)) \"(L y , y)\"))\n",
+    "; higher-order function, abstration, serial\n",
+    "(assert (= (L x , x (L y , y) (L z , z)) \"(L z , z)\"))\n",
+    "; higher-order function, apply function to function\n",
+    "(assert (= (L x , (x (L y , y)) (L z , z)) \"(L y , y)\"))\n",
+    "; higher-order function, value\n",
+    "(assert (= (L x , x (L y , y) 1) 1))"
    ]
   },
   {
@@ -160,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000150F1A11510>"
+       "<function <lambda> at 0x00000152DD8818C8>"
       ]
      },
      "execution_count": 5,
@@ -200,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000150F1964F28>"
+       "<function <lambda> at 0x00000152DD8819D8>"
       ]
      },
      "execution_count": 6,
@@ -243,7 +255,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000150F1C4B2F0>"
+       "<function <lambda> at 0x00000152DD81C268>"
       ]
      },
      "execution_count": 7,
@@ -274,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "<function <lambda> at 0x00000150F1C4B268>"
+       "<function <lambda> at 0x00000152DD644B70>"
       ]
      },
      "execution_count": 8,
@@ -326,7 +338,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "(assert (= (, (TRUE) (TRUE 1 0) \n",
@@ -345,11 +359,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; nil\n",
-    "(assert (= (NIL) \"(L x , (L a b , a))\"))\n",
+    "(assert (= (NIL) \"(L x , (L a , (L b , a)))\"))\n",
     "; empty, list end\n",
     "(assert (= (EMPTY) \"(L s , (s (L x , (L a b , a)) (L x , (L a b , a))))\"))\n",
     "; pair constructor\n",
@@ -385,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; nil? for nested pairs\n",
@@ -427,7 +445,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; church numeral general generator, without arguments\n",
@@ -436,7 +456,11 @@
     "(assert (= (NUM 3 m n) \"(m (m (m n)))\"))\n",
     "; church numeral, general generator, with arguments\n",
     "(assert (= (, (ONE) (TWO x y) (THREE m n))\n",
-    "           (, \"(L x , (L y , (x y)))\" \"(x (x y))\" \"(m (m (m n)))\")))"
+    "           (, \"(L x , (L y , (x y)))\" \"(x (x y))\" \"(m (m (m n)))\")))\n",
+    "; natural number sharp macro\n",
+    "(assert (= #ℕ2) (NUM 2))\n",
+    "; natural number sharp macro, with space\n",
+    "(assert (= #ℕ 2) TWO)"
    ]
   },
   {
@@ -449,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; church numeral, zero\n",
@@ -470,7 +496,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; empty has two nils as a pair\n",
@@ -521,7 +549,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "(assert (= (HEAD (REVERSE (LIST ONE TWO)) x y)\n",
@@ -550,7 +580,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "(assert (= (LET a 1 b 2 d 3 (a b c d)) \"(1 2 c 3)\"))\n",
@@ -601,7 +633,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; not \n",
@@ -647,7 +681,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "; lesser or equal\n",
@@ -786,7 +822,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recursion error occured for lambda expression:  (x , (x x) (L x , (x x)))\n"
+      "Recursion error occured for lambda expression:  (x x)\n"
      ]
     }
    ],
